# pam-face-authentication

./: .kgreet_pam_face_authentication.cpp.swn  AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.am~  Makefile.in  README  aclocal.m4  adducantdance.pgm  adducantdance1.pgm  config.h  config.h.in  config.status  configure  configure.ac  configure.ac~  db.lst  debug  detector.cpp  detector.h  docsDoxygen  eyesDetector.cpp  eyesDetector.h  eyesDetectorB.h  faceAuth.cpp  faceAuth.h  faceAuth.ui  faceDetector.cpp  faceDetector.h  faceTrainer.h  faceTrainer.ui  faceTrainerAdvSettings.h  faceTrainerAdvSettings.ui  featureLBPHist.c  featuresAverage  featuresDCT  graphics.qrc  gtk-faceauthenticate.c  (+37 more)
.deps/: libfaceconfigure.Po  pam_face_authenticate_so-libfacedetect.Po  pam_face_authenticate_so-pam_face_authentication.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
data/ui/uifiles/: aboutDialog.ui  faceTrainer.ui  faceTrainerAdvSettings.ui
include/: aboutBox.h  detector.h  eyesDetector.h  faceDetector.h  faceTrainer.h  faceTrainerAdvSettings.h  opencvWebcam.h  pam_face_authentication.h  pam_face_defines.h  qtUtils.h  tracker.h  utils.h  verifier.h  webcamImagePaint.h
kgreet_plugin/: .kgreet_pam_face_authentication.cpp.swo  CMakeLists.txt  kgreet_faceauthenticate.cpp  kgreet_faceauthenticate.h
libsvm/: svm-predict.c  svm-predict.c~  svm-scale.c  svm-train.c  svm-train.c~
pam-face-authentication/: libfaceconfigure.c  libfacedetect.c  pam_face_authentication.c
pam-face-authentication/gtk-facemanager/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  gtk-facemanager.glade.bak  gtk-facemanager.gladep
pam-face-authentication/gtk-facemanager/autom4te.cache/: output.0  traces.0  traces.1
pam-face-authentication/gtk-facemanager/po/: Makefile  Makefile.in
pam-face-authentication/gtk-facemanager/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h  main.c
pam-face-authentication/gtk-facemanager/src/.deps/: callbacks.Po  interface.Po  main.Po  support.Po
pam-face-authentication/gtk-facetracker/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.in  gtk-facetracker.glade  gtk-facetracker.gladep
pam-face-authentication/gtk-facetracker/autom4te.cache/: output.0  requests  traces.0  traces.1
pam-face-authentication/gtk-facetracker/po/: Makefile  Makefile.in
pam-face-authentication/gtk-facetracker/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h.bak  main.c
pam_face_authentication/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  THANKS  aclocal.m4  autogen.sh  cmd-facetracker.c  config.h  config.status  configure  configure.ac  faceauthenticate.c  featureDctMod2.c  featureLBPHist.c  featuresDistance  featuresLBP  gtk-faceauthenticate.c  gtk-faceauthenticate.glade  gtk-faceauthenticate.glade.bak  gtk-faceauthenticate.xml  gtk-facemanager.c  gtk-facemanager.glade  gtk-facemanager.xml  gtk-facemanagerU.c  gtk-facemanagerU.xml  gtk-facemanager_updated.glade  libfaceauthenticate.c  libfaceauthenticate.h  libfaceconfigure.c  libfacedetect.c  pam_face.h  pam_face_authentication.c  pam_face_defines.h  parseSvmPrediction.c  test.c  trainer.c
pam_face_authentication/.deps/: featureDctMod2.Po  featureLBPHist.Po  gtk-faceauthenticate.Po  gtk-facemanager.Po  gtk-facemanagerU.Po  libfaceauthenticate.Plo  libfaceauthenticate_la-featureDctMod2.Plo  libfaceauthenticate_la-featureLBPHist.Plo  libfaceauthenticate_la-libfaceauthenticate.Plo  libfaceauthenticate_la-parseSvmPrediction.Plo  libfaceconfigure.Po  libfacedetect.Plo  libfacedetect.Po  libsvm-train.Po  pam_face_authenticate_so-featureDctMod2.Po  pam_face_authenticate_so-featureLBPHist.Po  pam_face_authenticate_so-libfaceauthenticate.Po  pam_face_authenticate_so-pam_face_authentication.Po  pam_face_authenticate_so-parseSvmPrediction.Po  pam_face_authenticate_so-svm-scale.Po  svm-predict.Po  svm-scale.Po  svm-train.Po  svm.Po  trainer.Po
pam_face_authentication/autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
pam_face_authentication/libsvm/: libsvm-train.c  svm.cpp  trainer.c
qtbranch/: AUTHORS  CMakeLists.txt  docsDoxygen  qt-facetrainer-desktop.sh
qtbranch/cmake/modules/: FindOpenCV.cmake
qtbranch/data/haarcascades/: config.xml
qtbranch/include/: aboutBox.h  detector.h  eyesDetector.h  faceDetector.h  faceTrainer.h  faceTrainerAdvSettings.h  opencvWebcam.h  pam_face_authentication.h  pam_face_defines.h  qtUtils.h  tracker.h  utils.h  verifier.h
qtbranch/src/: detector.cpp  eyesDetector.cpp  faceDetector.cpp  faceTrainer.cpp  faceTrainerAdvSettings.cpp  main.cpp  opencvWebcam.cpp  pam_face_authentication.cpp  qtUtils.cpp  test.cpp  tracker.cpp  utils.cpp  verifier.cpp  xwindowFaceAuth.c
qtbranch/trans/: pam_face_authentication_de.po  pam_face_authentication_es.po  pam_face_authentication_fr.po  pam_face_authentication_it.po  pam_face_authentication_nl.po  pam_face_authentication_pt_PT.po  pam_face_authentication_ru_RU.po  pam_face_authentication_ru_RU.ts  pam_face_authentication_sv.po  pam_face_authentication_tr.po  pam_face_authentication_uk.po  qt_facetrainer_de.po  qt_facetrainer_de.ts  qt_facetrainer_es.po  qt_facetrainer_es.ts  qt_facetrainer_fr.po  qt_facetrainer_fr.ts  qt_facetrainer_it.po  qt_facetrainer_it.ts  qt_facetrainer_nl.po  qt_facetrainer_nl.ts  qt_facetrainer_pt_PT.po  qt_facetrainer_pt_PT.ts  qt_facetrainer_ru_RU.po  qt_facetrainer_ru_RU.ts  qt_facetrainer_sv.po  qt_facetrainer_sv.ts  qt_facetrainer_tr.po  qt_facetrainer_tr.ts  qt_facetrainer_uk.po  qt_facetrainer_uk.ts
src/: detector.cpp  eyesDetector.cpp  eyesDetectorBackup.cpp  faceDetector.cpp  main.cpp  opencvWebcam.cpp  pam_face_authentication.cpp  qtUtils.cpp  tracker.cpp  utils.cpp  verifier.cpp  webcamImagePaint.cpp  xwindowFaceAuth.c
tempwork/: utils1.cpp  utils2.cpp
translation/0.4/: pam_face_authentication.pot  qt_facetrainer.pot
(+5 files in other folders)
